# twiddler-cfg

./: Cargo.toml  README.md  format.md  format.txt  test.cfg
.github/workflows/: release.yml
configs/: backspicev2_v6.cfg  twiddler_cfg_CoolHand.csv
src/: buttons.rs  csv.rs  dido.rs  hid.rs  main.rs  twiddler5.rs  twiddler6.rs  twiddler7.rs
test/configs/v6/: haptic_off.cfg  idle_time_10min.cfg  idle_time_1s.cfg  key_repeat_delay_10ms.cfg  key_repeat_delay_2500ms.cfg  key_repeat_delay_off.cfg  left_mouse_pos.cfg  mouse_sensitivity_1.cfg  mouse_sensitivity_254.cfg  sticky_alt.cfg  sticky_ctrl.cfg  sticky_num.cfg  sticky_shift.cfg
test/configs/v7/: default.cfg  direct.cfg  empty.cfg  empty_w_system.cfg  haptic_off.cfg  idle_time_1min.cfg  key_repeat_10ms.cfg  key_repeat_delay_off.cfg  left_mouse_pos.cfg  m0_keyboard_a.cfg  mouse_sensitivity_1.cfg  sticky_alt.cfg  sticky_ctrl.cfg  sticky_num.cfg  sticky_shift.cfg
