[package]
name = "twiddler_cfg"
version = "0.2.0"
edition = "2021"
description = "Convert Twiddler v5 configs to Twiddler v6 configs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
binrw = "0.14.0"
byteorder = "1.5.0"
clap = { version = "4.5.10", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
csv = "1.3.0"
hex = "0.4.3"
modular-bitfield = "0.11.2"
nom = "7.1.3"
serde = { version = "1.0.204", features = ["derive"] }
simple-error = "0.3.1"
